<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MX Video Player</string>

    <!-- TODO: Remove or change this placeholder text -->


    <!--About Page-->


    <string name="folders">\t\tFolders</string>
    <string name="no_media">No media files found.</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="video_title">Video Title</string>

    <!-- ExoPlayer -->
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_back_description">Back</string>
    <string name="exo_controls_lock_description">Lock</string>
    <string name="exo_controls_cut_next_description">CutNext</string>
    <string name="exo_controls_cut_pre_description">CutPrevious</string>
    <string name="exo_controls_audio_track_description">Audio track</string>
    <string name="exo_controls_subtitle_track_description">Subtitle</string>
    <string name="exo_controls_scale_fit_description">Fit to screen</string>
    <string name="exo_controls_scale_width_description">Fix Width</string>
    <string name="exo_controls_scale_height_description">Fix Height</string>
    <string name="exo_controls_scale_fill_description">Stretch</string>
    <string name="exo_controls_scale_zoom_description">Crop</string>

    <string name="error_unsupported_video">Video format is not supported.</string>
    <string name="error_unsupported_audio">Audio format is not supported.</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>

    <!-- Dialog -->
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="confirm_delete">Are you sure to delete %1$d video(s)?</string>
    <string name="confirm_delete_folder">All video files on the following folder will be deleted permanently.</string>
    <string name="rename">Rename</string>
    <string name="rename_hint">Please enter the name</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="size">Size</string>
    <string name="total_size">Total Size</string>
    <string name="location">Location</string>
    <string name="contains">Contains</string>
    <string name="detail">Info</string>
    <string name="properties">Properties</string>
    <string name="resolution">Resolution</string>
    <string name="duration">Duration</string>
    <string name="type">Type</string>
    <string name="date">Date</string>

    <string name="text_default">Default</string>
    <string name="text_default_bold">Default Bold</string>
    <string name="text_sans_serif">Sans Serif</string>
    <string name="text_serif">Serif</string>
    <string name="text_monospace">Monospace</string>

    <!-- Menu -->
    <string name="select_all">Select all</string>
    <string name="setting">Setting</string>
    <string name="theme">Select Theme</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="sort">Sort</string>
    <string name="subtitle_text">Subtitle Text</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="hint_search">Search Videos</string>

    <!-- Setting -->

    <string name="playback">Playback</string>
    <string name="equalizer">Equalizer</string>
    <string name="equalizer_tag">Adjust audio setting</string>
    <string name="subtitle_text_tag">Change subtitle text font style</string>

    <string name="general">General</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_us_tag">Rate Video Player 5 star on Google Play</string>
    <string name="share">Share</string>
    <string name="share_tag">Share Video Player with your friends</string>
    <string name="update">Update</string>
    <string name="update_tag">Check new version of app on Google Play</string>
    <string name="more">More</string>
    <string name="more_tag">Visit our account to more Apps</string>

    <!-- Pin lock-->
    <string name="enter_pin">Enter 4-digit PIN</string>
    <string name="confirm_pin">Confirm your PIN</string>
    <string name="pin_mismatch">PIN mismatch. Try again.</string>
    <string name="enter_pin_to_unlock">Enter PIN to unlock.</string>
    <string name="wrong_pin">Wrong PIN. Try again.</string>
    <string name="old_pin">Enter old PIN</string>
    <string name="change_pin">Change Pin</string>
    <string name="change_security">Change Security Question</string>

    <string name="private_video">Private Video</string>
    <string name="lock_in_private_folder">Lock in Private folder</string>
    <string name="unlock_from_private_folder">Unlock from Private</string>

    <string name="confirm_delete_dialog">Are you sure to delete this video?</string>

    <string name="rta_dialog_title">Do you like our App?</string>
    <string name="rta_dialog_message">Give us 5 star rating in play store</string>
    <string name="rta_dialog_ok">RATE NOW</string>
    <string name="rta_dialog_cancel">LATER</string>
    <string name="rta_dialog_no">NO, THANKS</string>

    <string name="exit_dialog_title">Exit From App ?</string>
    <string name="exit_dialog_message">Are you sure you want to exit from the app ?</string>
    <string name="exit_dialog_yes">YES</string>
    <string name="exit_dialog_no">NO</string>
    <string name="moreApps1">https://play.google.com/store/apps/details?id=com.google.com</string>
    <string name="moreApps">https://google.com</string>
    <string name="policy">https://www.google.com</string>

    <!--Color For Dialog-->
    <color name="colorDBackground">#363636</color> <!--#d32f2f-->
    <color name="colorDTitleText">#ffffff</color>
    <color name="colorDMessageText">#f2f2f2</color>
</resources>
