<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menu_them"
        android:icon="@drawable/ic_theamchange"
        android:iconTint="#fff"
        android:title="Theme"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <!--<item-->
        <!--android:id="@+id/menu_lock"-->
        <!--android:icon="@drawable/ic_private"-->
        <!--android:title="@string/lock"-->
        <!--app:showAsAction="always" />-->

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/selector_btn_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_menu"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />

</menu>