<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/dialog_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort" />

    <!--<TextView
        android:id="@+id/txtWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/confirm_delete"
        android:textColor="#666666"
        android:textSize="15sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rgSortType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/title"
                android:theme="@style/customRadio" />

            <RadioButton
                android:id="@+id/rbDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:theme="@style/customRadio" />

            <RadioButton
                android:id="@+id/rbSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:theme="@style/customRadio" />

            <RadioButton
                android:id="@+id/rbTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:theme="@style/customRadio" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtDialogCancel"
            style="@style/dialog_button_style"
            android:layout_width="wrap_content"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/txtDialogConfirm"
            style="@style/dialog_button_style"
            android:layout_width="wrap_content"
            android:text="@string/confirm" />

    </LinearLayout>

</LinearLayout>