<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/theme"
    android:background="@drawable/theme1"
    android:orientation="vertical">

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:id="@+id/appBarLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/hedar_color"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp">

            <TextView
                android:id="@+id/txtToolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/titileFontColor"
                android:textSize="17sp" />
        </androidx.appcompat.widget.Toolbar>
<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/playback"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:onClick="btnEqualiser"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/equalizer"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="@string/equalizer_tag"
                    android:textColor="@color/setting_normal_text"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dp"
                android:background="@color/video_setting_font_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:onClick="btnSubtitleText"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/subtitle_text"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="@string/subtitle_text_tag"
                    android:textColor="@color/setting_normal_text"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dp"
                android:background="@color/video_setting_font_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/general"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:onClick="btnRateUs"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/rate_us"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="@string/rate_us_tag"
                    android:textColor="@color/setting_normal_text"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dp"
                android:background="@color/video_setting_font_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:onClick="btnShare"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="@string/share_tag"
                    android:textColor="@color/setting_normal_text"
                    android:textSize="13sp" />
            </LinearLayout>
<View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dp"
                android:background="@color/video_setting_font_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:onClick="btnpolicy"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="Privacy Policy "
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="Our Privacy Policy "
                    android:textColor="@color/setting_normal_text"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dp"
                android:background="@color/video_setting_font_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:onClick="btnUpdate"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="@string/update_tag"
                    android:textColor="@color/setting_normal_text"
                    android:textSize="13sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dp"
                android:background="@color/video_setting_font_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:onClick="btnMore"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/more"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="@string/more_tag"
                    android:textColor="@color/setting_normal_text"
                    android:textSize="13sp" />
            </LinearLayout>



        </LinearLayout>




    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/ll_ad_container"
        android:orientation="vertical" />

</RelativeLayout>
