<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/dialog_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/hedar_color"
        android:text="@string/properties" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/containsLeft"
                style="@style/dialog_item_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contains" />

            <TextView
                android:id="@+id/txtContains"
                style="@style/dialog_item_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/containsLeft"
                android:layout_marginLeft="5dp"
                android:text="@string/contains" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">

            <TextView
                android:id="@+id/sizeLeft"
                style="@style/dialog_item_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_size" />

            <TextView
                android:id="@+id/txtSize"
                style="@style/dialog_item_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/sizeLeft"
                android:layout_marginLeft="5dp"
                android:text="@string/total_size" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/theme_alpha" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtDialogClose"
            style="@style/dialog_button_style"
            android:layout_width="wrap_content"
            android:text="@string/close" />

    </LinearLayout>

</LinearLayout>